# ShirokumaKunController

./: .clang-format  .gitignore  CMakeLists.txt  FreeRTOSConfig.h  build.zsh  cmd_gen.c  cmd_gen.h  gdb_server.zsh  ir_recv.c  ir_recv.h  ir_send.c  ir_send.h  lwipopts.h  main.c  openocd.zsh  rebuild.zsh  scd40.c  scd40.h
